# IKN-attend-system

./: .gitignore  README.md  docker-compose.yml
client/: Dockerfile  README.md  package-lock.json  package.json  vue.config.js
client/public/: index.html
client/src/: App.vue  color.ts  vue.config.js
client/src/components/: AttendList.vue  ChatBoard.vue  ChatPanel.vue  StudentPanel.vue  TemplateComponent.vue
client/src/router/: index.ts
client/src/views/: Home.vue  SignUp.vue
server/: .env  Cargo.toml  Dockerfile  people.db  people.db.base
server/migrations/2020-02-01-131041_create_people/: up.sql
server/src/: api.rs  db.rs  main.rs  person.rs  schema.rs
server_go/: go.mod  main.go
server_rust/: people.db  people.db.base
server_rust/migrations/2020-02-01-131041_create_people/: up.sql
server_rust/src/: api.rs  main.rs
