[package]
name = "server"
version = "0.1.0"
authors = ["rsy", "monkukui", "obatakyokan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
listenfd = "0.3"
actix-web = "2.0"
actix-rt = "1.0"
actix-files = "0.2.1"
serde = {version = "1.0", features = ["derive"] }

