[package]
name = "server"
version = "0.1.0"
authors = ["rsy", "monkukui", "obatakyokan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
listenfd = "0.3"
actix-web = "2.0"
actix-rt = "1.0"
actix-files = "0.2.1"
serde = {version = "1.0", features = ["derive"] }
diesel = {version ="1.4.0", features = ["sqlite", "r2d2"] }
dotenv = "0.9.0"
r2d2 = "0.8"
serde_repr = "0.1.6"
env_logger = "0.8.3"
